--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h4 {
 
 h1 {
   font-family: "PT Serif", serif;
-  color: #0099FF;
+  color: #003399;
   text-align: center; 
   font-weight: normal
 }
