--- a/style.css
+++ b/style.css
@@ -7,6 +7,18 @@ body {
 }
 
 
+h3 {
+  font-family: "PT Sans";
+  font-size: 12pt;
+  /*line-height: 175%;*/
+  font-weight: normal; 
+  font-style: italic
+  }
+
+}
+
+
+
 h4 {
   font-family: "PT Serif", serif;
   text-align: center; 
