--- a/style.css
+++ b/style.css
@@ -1,26 +1,79 @@
+
+
 body {
-  font-family: "PT Sans";
+  font-family: "times, serif";
   font-size: 13pt;
   line-height: 175%;
-  /*margin: 25px 165px 25px 165px;
+  color: black;
+  margin: 10px;
+  background-color:#FFFFFF;
   /*padding: 25px 5px 5px 5px; /* top right bottom left */
 }
 
 
-h1 {
-  font-family: "PT Serif", serif;
-  color: #003399;
-  text-align: center; 
-  font-weight: normal
+div {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    margin: 0px;
+    /*max-width: 90%;
+    min-width: 20%;*/
 }
 
+
+h1 { 
+    display: block;
+    color: #EA4335;
+    font-size: 1.3em;
+    margin-top: 0.67em;
+    margin-bottom: 0.67em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
+}
+
+
+
+h2 {
+  color: #EA4335;
+}
+
+
+.column {
+    float: left;
+    padding: 10px;
+    background-color:#FFFFFF;
+}
+
+.left, .right {
+  width: 25%;
+}
+
+
+.right {
+  width: 10%;
+}
+
+
+.middle {
+  width: 65%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 
 h3 {
   font-family: "PT Sans";
   font-size: 12pt;
   /*line-height: 175%;*/
   font-weight: normal; 
+  color: LightPink;
   font-style: italic
+
   }
 
 
@@ -28,6 +81,7 @@ h4 {
   font-family: "PT Serif", serif;
   text-align: center; 
   line-height: 140%;
+  color: LightPink;
   font-weight: normal
 }
 
@@ -60,22 +114,22 @@ code, pre {
 }
 
 a:link {
-    color: #000000;
+    color: #4285F4;
     background-color:transparent;
     text-decoration:underline;
 }
 a:visited {
-    color: #000000;
+    color: #34A853;
     background-color:transparent;
     text-decoration:underline;
 }
 a:hover {
-    color:#ff0000;
+    color: #FBBC05;
     background-color:transparent;
     text-decoration:underline;
 }
 a:active {
-    color:#ff0000;
+    color: #FBBC05;
     background-color:transparent;
     text-decoration:underline;
 }
@@ -87,7 +141,7 @@ a:active {
   margin: 0% 0 0 0;
   padding: 0;
   list-style: none;
-  background-color: #FFFFFF;
+  /*background-color: #FFFFFF;*/
   border-bottom: 1px solid #FFFFFF;
   border-top: 1px solid #FFFFFF;
   font-family: "PT Sans", sans-serif;
@@ -98,13 +152,17 @@ a:active {
   border-right: #ccc;
 }
 
-div {
-    width: 720px;
-    padding: 10px;
-    border: none;
-    margin: 0px;
-    max-width: 90%;
-    min-width: 20%;
+
+* {
+    box-sizing: border-box;
+}
+
+
+
+@media screen and (max-width: 500px) {
+    .column {
+        width: 100%;
+    }
 }
 
 .center {
@@ -116,6 +174,25 @@ div {
 
 img {
     border-radius: 50%;
+    max-width: 80%;
+    height: auto;
+    width: auto\9; /* ie8 */
+/*    -webkit-filter: grayscale(100%);  Safari 6.0 - 9.0 
+    filter: grayscale(100%);
+*/
+
+
+}
+
+IMG.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto }
+
+
+/* a paragraph proceeded by another paragraph will have a top margin */
+p + p {
+    margin-top: 0px;
 }
 
 
