--- a/style.css
+++ b/style.css
@@ -159,11 +159,22 @@ a:active {
 
 
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 600px) {
     .column {
         width: 100%;
     }
 }
+
+@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 667px) {
+  .column {
+        width: 100%;
+    }
+}
+
+
+
 
 .center {
     margin-left: auto;
