--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ a:link {
     text-decoration:underline;
 }
 a:visited {
-    color: #34A853;
+    color: #4285F4;
     background-color:transparent;
     text-decoration:underline;
 }
