--- a/style.css
+++ b/style.css
@@ -41,21 +41,21 @@ h2 {
 
 .column {
     float: left;
-    padding: 10px;
+    padding: 20px;
     background-color:#f0efef;
 
 }
 
 .left {
   width: 35%;
- padding-left: 30px;
+ /*padding-left: 30px;*/
 
 }
 
 
 .middle {
   width: 65%;
-  padding-right: 30px;
+  /*padding-right: 30px;*/
 
 }
 
