--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 body {
   font-family: "arial";
   font-size: 12pt;
@@ -28,8 +26,8 @@ h1 {
     display: block;
     color: #034f84;
     font-size: 1.5em;
-    margin-top: 0.67em;
-    margin-bottom: 0.67em;
+    margin-top: 1em;
+    margin-bottom: 0.5em;
     margin-left: 0;
     margin-right: 0;
     font-weight: bold;
@@ -44,43 +42,6 @@ h2 {
 }
 
 
-.column {
-    float: left;
-    padding: 20px;
-    background-color:#f0efef;
-
-}
-
-.left {
-  width: 35%;
- /*padding-left: 30px;*/
-
-}
-
-
-.middle {
-  width: 65%;
-  /*padding-right: 30px;*/
-
-}
-
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-h3 {
-  font-family: "PT Sans";
-  font-size: 12pt;
-  /*line-height: 175%;*/
-  font-weight: normal; 
-  color: LightPink;
-  font-style: italic
-
-  }
-
 
 h4 {
   font-family: "PT Serif", serif;
@@ -89,6 +50,7 @@ h4 {
   color: LightPink;
   font-weight: normal
 }
+
 
 h6 { 
     display: block;
@@ -99,7 +61,62 @@ h6 {
     margin-left: 0;
     margin-right: 0;
     font-weight: bold;
+  font-family: "arial";
+
 }
+
+
+.column {
+    float: left;
+    padding: 20px;
+    background-color:#f0efef;
+
+}
+
+
+.left {
+ width: 30%;
+ /*padding-left: 30px;*/
+ line-height: 150%;
+  font-size: 12pt;
+ color: #585858;
+   font-family: "PT Sans";
+}
+
+
+.middle {
+  width: 70%;
+  padding-right: 10px;
+    padding-left: 70px;
+
+
+}
+
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
+#one{
+  font-family: "PT Sans";
+  font-size: 11pt;
+  /*line-height: 175%;*/
+  font-weight: normal; 
+margin-top: -20px;  
+}
+
+#two{
+  font-family: "PT Sans";
+  font-size: 11pt;
+  /*line-height: 175%;*/
+  font-weight: normal; 
+margin-top: -10px;  
+}
+
 
 .contact {
   font-family: "PT Sans";
@@ -109,25 +126,30 @@ h6 {
   line-height: 35%;
 }
 
+
 .title, .author {
   display: none;
 }
 
+
 .footer {
-  font-family: "PT Serif", serif;
-  font-size: 90%;
+  font-family: "PT Sans";
+  font-size: 100%;
   color: #ababab;
   line-height: 140%;
 }
+
 
 hr.footer {
   margin-top: 10%;
 }
 
+
 code, pre {
   font-family: "Droid Sans Mono", monospace;
   font-size: 10pt;
 }
+
 
 a:link {
     color: #4285F4;
@@ -169,7 +191,6 @@ a:active {
 }
 
 
-
 .center {
     margin-left: auto;
     margin-right: auto;
@@ -189,6 +210,7 @@ img {
 
 }
 
+
 IMG.displayed {
     display: block;
     margin-left: auto;
@@ -201,11 +223,9 @@ p + p {
 }
 
 
-
 * {
     box-sizing: border-box;
 }
-
 
 
 @media screen and (max-width: 600px) {
@@ -217,6 +237,7 @@ p + p {
 
 }
 
+
 @media only screen 
 and (min-device-width : 375px) 
 and (max-device-width : 667px) {
@@ -226,6 +247,23 @@ and (max-device-width : 667px) {
   IMG.displayed {display:none} 
 
 }
+
+
+.button {
+  border: none;
+  color: white;
+text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 11px;
+/*  margin: 4px 2px;
+*/  cursor: pointer;
+}
+
+.button1 {background-color: #034f84;} /* blue */
+.button2 {background-color: #f7786b;} /* orange */
+.button3 {background-color: #c94c4c;} /* red */
+.button4 {background-color: #5b9aa0;} /* green */
 
 
 
