--- a/style.css
+++ b/style.css
@@ -34,17 +34,8 @@ h1 {
 }
 
 
-
-h2 {
-  color: #92a8d1;
-      font-size: 1em;
-
-}
-
-
-
 h4 {
-  font-family: "PT Serif", serif;
+  font-family: "Helvetica"
   text-align: center; 
   line-height: 140%;
   color: LightPink;
@@ -62,7 +53,6 @@ h6 {
     margin-right: 0;
     font-weight: bold;
   font-family: "arial";
-
 }
 
 
@@ -80,7 +70,7 @@ h6 {
  line-height: 150%;
   font-size: 12pt;
  color: #585858;
-   font-family: "PT Sans";
+   font-family: "Helvetica"
 }
 
 
@@ -102,16 +92,16 @@ h6 {
 
 
 #one{
-  font-family: "PT Sans";
-  font-size: 11pt;
+  font-family: "Helvetica"
+  font-size: 12pt;
   /*line-height: 175%;*/
   font-weight: normal; 
 margin-top: -20px;  
 }
 
 #two{
-  font-family: "PT Sans";
-  font-size: 11pt;
+  font-family: "Helvetica"
+  font-size: 12pt;
   /*line-height: 175%;*/
   font-weight: normal; 
 margin-top: -10px;  
@@ -119,7 +109,7 @@ margin-top: -10px;
 
 
 .contact {
-  font-family: "PT Sans";
+  font-family: "Helvetica"
   font-weight: bold;
   color: #C0C0C0;
   text-align: left;
@@ -133,7 +123,7 @@ margin-top: -10px;
 
 
 .footer {
-  font-family: "PT Sans";
+  font-family: "Helvetica", serif;
   font-size: 100%;
   color: #ababab;
   line-height: 140%;
@@ -234,7 +224,7 @@ p + p {
 text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 11px;
+  font-size: 12px;
 /*  margin: 4px 2px;
 */  cursor: pointer;
 }
