--- a/style.css
+++ b/style.css
@@ -249,10 +249,13 @@ and (min-device-width : 375px)
 and (max-device-width : 667px) {
   .column {
         width: 100%;
+        padding-left:0;
+
     }
   IMG.displayed {display:none} 
 
 }
+
 
 </style>
 
