--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ div {
 .research {
   font-family: Times;
     float: center;
-    padding: 1px;
-    background-color:#FFFFFF;
+    padding: 10px;
+    background-color:white;
     margin-left: auto;
     margin-right: auto;
     max-width: 650px;
