--- a/style.css
+++ b/style.css
@@ -67,8 +67,6 @@ h2 {
 }
 
 
-
-
 .footer {
   font-family: "Helvetica", serif;
   font-size: 100%;
@@ -142,20 +140,45 @@ p + p {
 
 
 .button {
-  border: none;
-  color: white;
-text-align: center;
+  border: 1px solid black;
+  color: black;
+  text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 12px;
-/*  margin: 4px 2px;
-*/  cursor: pointer;
+  text-decoration:underline;
+margin: 0px 0px;
+ cursor: pointer;
 }
 
-.button1 {background-color: #034f84;} /* blue */
-.button2 {background-color: #f7786b;} /* orange */
-.button3 {background-color: #c94c4c;} /* red */
-.button4 {background-color: #5b9aa0;} /* green */
+.button1 {background-color: white;} /* blue */
+.button2 {background-color: white;} /* orange */
+.button3 {background-color: white;} /* red */
+.button4 {background-color: white;} /* green */
+
+
+button:link {
+    color: #4285F4;
+    background-color:transparent;
+    text-decoration:underline;
+}
+button:visited {
+    color: #4285F4;
+    background-color:transparent;
+    text-decoration:underline;
+}
+button:hover {
+    color: #4285F4;
+    background-color:transparent;
+    text-decoration:underline;
+}
+
+button:active {
+    color: #4285F4;
+    background-color:transparent;
+    text-decoration:underline;
+}
+
 
 @media screen and (max-width: 600px) {
     .column {
